# vitron

./: .env.example  .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  seed.ts  tailwind.config.js  tsconfig.json
.expo/types/: router.d.ts
ai-service/: Cargo.toml
ai-service/src/: ai.rs  lambda_analyze.rs  lambda_s3.rs  main.rs.actix-backup  s3.rs
app/: _layout.tsx  index.tsx
app/(api)/: ai-meal-image+api.ts  ai-meal-label+api.ts  first-weight-goal+api.ts  food+api.ts  meal-goals+api.ts  meal-images+api.ts  user+api.ts  user-status+api.ts  water+api.ts  weight-goals+api.ts  weights+api.ts
app/(auth)/: _layout.tsx  measurements.tsx  sign-in.tsx  sign-up.tsx  welcome.tsx
app/(root)/: _layout.tsx  exercise-detail.tsx  set-goal.tsx  track-weight.tsx
assets/animations/: ai_animation.json
backend/: fly.toml  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
components/activities/: WorkoutBottomSheet.tsx
components/auth/: OAuth.tsx  SignOutButton.tsx
components/food/: Example.tsx  FoodCameraView.tsx  FoodDateSelector.tsx  FoodEntryChoiceModal.tsx  FoodEntryModal.tsx  FoodHeader.tsx  FoodLabelEntryModal.tsx  FoodStats.tsx  FoodStatsCard.tsx  MacroProgressBar.tsx  (+3 more)
constants/: index.ts
hooks/: useFoodData.ts  useWeightData.ts
lib/: auth.ts  fetch.ts  graphqlRequest.ts  utils.ts
migrations/: migrations.sql
prompts/: macroCalculation.ts
scripts/: image-to-base64.js  upload-test-image.js
services/: streakService.ts  weightService.ts
types/: react-native-date-time-scroll-picker.d.ts  type.d.ts
(+70 files in other folders)
