[package]
name = "ai-service"
version = "0.1.0"
edition = "2021"

# Lambda binary for analyze-image function
[[bin]]
name = "analyze-image"
path = "src/lambda_analyze.rs"

# Lambda binary for s3-upload function
[[bin]]
name = "s3-upload"
path = "src/lambda_s3.rs"

[dependencies]
# Lambda runtime
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.21"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.108.0"
bytes = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Keep original dependencies for local development (optional)
# actix-web = "4"
# actix-cors = "0.6"
# dotenvy = "0.15"

